FCL-768 | ensure pr-two-column tables don't break over whitespace

--- a/src/includes/_judgment_text.scss
+++ b/src/includes/_judgment_text.scss
@@ -237,6 +237,7 @@
     &.pr-two-column {
       table-layout: fixed;
       width: 100%;
+      white-space: nowrap;
 
       td:first-child {
         width: 80%;
